finish chap 1/2, write an outline for chap 3/4

--- a/headers.tex
+++ b/headers.tex
@@ -58,6 +58,7 @@
 \newcommand{\gr}{\mathcal{G}}
 \newcommand{\veca}{\bsym{a}}
 \newcommand{\vecb}{\bsym{b}}
+\newcommand{\vecc}{\bsym{c}}
 \newcommand{\vecd}{\bsym{d}}
 \newcommand{\vece}{\bsym{e}}
 \newcommand{\vecq}{\bsym{q}}
@@ -80,6 +81,7 @@
 \newcommand{\matd}{\bsym{D}}
 \newcommand{\mata}{\bsym{A}}
 \newcommand{\matb}{\bsym{B}}
+\newcommand{\matc}{\bsym{C}}
 \newcommand{\matf}{\bsym{F}}
 \newcommand{\matfstar}{\bsym{F}^*}
 \newcommand{\mati}{\bsym{I}}
