--- a/refs.bib
+++ b/refs.bib
@@ -825,3 +825,38 @@
   year      = {2016},
   publisher = {Elsevier}
 }
+
+@article{KrSiGu08,
+  title   = {Near-optimal sensor placements in Gaussian processes: Theory, efficient algorithms and empirical studies.},
+  author  = {Krause, Andreas and Singh, Ajit and Guestrin, Carlos},
+  journal = {Journal of Machine Learning Research},
+  volume  = {9},
+  number  = {2},
+  year    = {2008}
+}
+
+@article{RaChVe13,
+  title   = {Near-Optimal Sensor Placement for Linear Inverse Problems},
+  author  = {Juri Ranieri and Amina Chebira and Martin Vetterli},
+  journal = {IEEE Transactions on Signal Processing},
+  year    = {2013},
+  volume  = {62},
+  pages   = {1135-1146}
+}
+
+@article{DiChWaBa20,
+  title   = {Sampling Of 3d Point Cloud Via Gershgorin Disc Alignment},
+  author  = {Chinthaka Dinesh and Gene Cheung and Fen Wang and Ivan V. Baji{\'c}},
+  journal = {2020 IEEE International Conference on Image Processing (ICIP)},
+  year    = {2020},
+  pages   = {2736-2740}
+}
+
+@article{ChTiFeVeKo17,
+  title   = {Fast Resampling of Three-Dimensional Point Clouds via Graphs},
+  author  = {Siheng Chen and Dong Tian and Chen Feng and Anthony Vetro and Jelena Kovacevic},
+  journal = {IEEE Transactions on Signal Processing},
+  year    = {2017},
+  volume  = {66},
+  pages   = {666-681}
+}
